force-app/main/default/objects/AAR_Award__c/AAR_Award__c.object-meta.xml
<CustomObject>
    <description
  >Records prizes, fellowships, named lectureships, and recognition received in the reporting year.</description>
    <label>Award &amp; Honour</label>
    <nameField>
        <displayFormat>AWD-{0000}</displayFormat>
        <label>Award Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Awards &amp; Honours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>