force-app/main/default/objects/AAR_Award__c/fields/AAR_Submission__c.field-meta.xml
<CustomField>
    <fullName>AAR_Submission__c</fullName>
    <label>AAR Submission</label>
    <referenceTo>AAR_Submission__c</referenceTo>
    <relationshipLabel>Awards &amp; Honours</relationshipLabel>
    <relationshipName>Awards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>