force-app/main/default/objects/AAR_Award__c/fields/Award_Category__c.field-meta.xml
<CustomField>
    <fullName>Award_Category__c</fullName>
    <label>Award Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Research Excellence</fullName>
            </value>
            <value>
                <fullName>Teaching</fullName>
            </value>
            <value>
                <fullName>Mentorship</fullName>
            </value>
            <value>
                <fullName>Career Achievement</fullName>
            </value>
            <value>
                <fullName>Fellowship</fullName>
            </value>
            <value>
                <fullName>Named Lectureship</fullName>
            </value>
            <value>
                <fullName>Patient Impact</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>