force-app/main/default/objects/AAR_Award__c/fields/Award_Name__c.field-meta.xml
<CustomField>
    <fullName>Award_Name__c</fullName>
    <label>Award Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>