force-app/main/default/objects/AAR_Award__c/fields/Awarding_Agency__c.field-meta.xml
<CustomField>
    <fullName>Awarding_Agency__c</fullName>
    <label>Awarding Agency</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>